--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning node, express and mongoDB",
   "main": "app.js",
   "scripts": {
-    "start:dev": "nodemon server.js",
+    "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "author": "Danh Dinh",
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
+    "mongoose": "^7.3.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -25,5 +26,8 @@
     "eslint-plugin-react": "^7.32.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8"
+  },
+  "engines": {
+    "node": ">=10.6.0"
   }
 }
