--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Danh Dinh",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
