--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "sudo ndb server.js"
+    "debug": "sudo ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Danh Dinh",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -22,21 +27,22 @@
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.3",
+    "pug": "^3.0.2",
     "slugify": "^1.6.6",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "eslint": "^8.43.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-node": "^1.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.25.3",
     "ndb": "^0.2.4",
-    "nodemon": "^2.0.22",
+    "nodemon": "^1.14.9",
+    "parcel-bundler": "^1.12.5",
     "prettier": "^2.8.8"
   },
   "engines": {
