--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "sudo ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Danh Dinh",
   "license": "ISC",
@@ -32,6 +32,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.32.1",
     "slugify": "^1.6.6",
+    "stripe": "^12.10.0",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.4"
   },
